# clawdesk

./: .gitignore  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml
docs/plans/: plan-20260301-0900-桌面化改造.md  plan-20260301-0948-sqlite持久化.md  plan-20260301-1026-openclaw配置接管.md
scripts/: build-desktop-web.mjs  generate-updater-manifest.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat_store.rs  detect_gateway.rs  mod.rs  openclaw_cli.rs  openclaw_config.rs  openclaw_runtime.rs  openclaw_runtime_tests.rs
src-tauri/src/db/: mod.rs  model.rs  schema.rs  store.rs  store_tests.rs
src/app/: layout.tsx  page.tsx
src/app/api/detect-gateway/: route.ts
src/components/: about-panel.tsx  app-auto-updater.tsx  app-sidebar.tsx  app-update-button.tsx  chat-input.tsx  chat-layout.tsx  chat-messages.tsx  openclaw-config-panel.tsx  openclaw-nav.tsx  search-dialog.tsx  settings-dialog.tsx
src/components/openclaw/: openclaw-cli-section.tsx  openclaw-skills-section.tsx
src/lib/: app-updater.ts  conversation-title.test.js  conversation-title.ts  db.ts  desktop-db.ts  desktop.ts  openclaw-config-gateway.test.js  openclaw-config-gateway.ts  openclaw-config.ts  openclaw-skills.test.js  openclaw-skills.ts  openclaw-updater.ts  store.tsx
